--- a/iroha_substrate/parachain/Cargo.toml
+++ b/iroha_substrate/parachain/Cargo.toml
@@ -1,46 +1,19 @@
 [package]
-name = "polkadot-parachain"
-version = "0.8.2"
-authors = ["Parity Technologies <admin@parity.io>"]
-description = "Types and utilities for creating and working with parachains"
+name = "iroha-parachain"
+version = "0.7.22"
+authors = ["Soramitsu <https://soramitsu.co.jp/>"]
+description = "Iroha parachain."
 edition = "2018"
 
 [dependencies]
-# note: special care is taken to avoid inclusion of `sp-io` externals when compiling
-# this crate for WASM. This is critical to avoid forcing all parachain WASM into implementing
-# various unnecessary Substrate-specific endpoints.
-codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = [ "derive" ] }
-sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
-sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
+tiny-keccak = "1.5.0"
+codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
 
-# all optional crates.
-derive_more = { version = "0.99.2", optional = true }
-serde = { version = "1.0.102", default-features = false, features = [ "derive" ], optional = true }
-sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "master", optional = true, default-features = false }
-sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
-sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
-sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
-parking_lot = { version = "0.10.0", optional = true }
-log = { version = "0.4.8", optional = true }
-
-[target.'cfg(not(any(target_os = "android", target_os = "unknown")))'.dependencies]
-shared_memory = { version = "0.10.0", optional = true }
+parachain = { git = "https://github.com/paritytech/polkadot", package = "polkadot-parachain", tag = "v0.8.8" }
+runtime = { package = "iroha-runtime", path = "runtime" }
 
 [features]
-default = ["std"]
-wasm-api = ["sp-runtime-interface"]
+default = [ "std" ]
 std = [
-	"codec/std",
-	"derive_more",
-	"serde/std",
-	"sp-std/std",
-	"shared_memory",
-	"sp-core/std",
-	"parking_lot",
-	"log",
-	"sp-runtime-interface/std",
-	"sp-externalities",
-	"sc-executor",
-	"sp-io",
+	"runtime/std",
 ]
