--- a/iroha_substrate/parachain/runtime/Cargo.toml
+++ b/iroha_substrate/parachain/runtime/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "iroha-runtime"
-version = "0.8.2"
+version = "0.8.8"
 authors = ["Soramitsu <https://soramitsu.co.jp/>"]
 description = "Parachain to provide iroha - polkadot connection."
 edition = "2018"
 build = "build.rs"
 
 [dependencies]
-parachain = { package = "polkadot-parachain", path = "../../", default-features = false, features = [ "wasm-api" ] }
+parachain = { git = "https://github.com/paritytech/polkadot", package = "polkadot-parachain", tag = "v0.8.8", default-features = false, features = [ "wasm-api" ] }
 codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
 tiny-keccak = "1.5.0"
 dlmalloc = { version = "0.1.3", features = [ "global" ] }
