--- a/iroha_substrate/parachain/runtime/Cargo.toml
+++ b/iroha_substrate/parachain/runtime/Cargo.toml
@@ -7,13 +7,13 @@ edition = "2018"
 build = "build.rs"
 
 [dependencies]
-parachain = { git = "https://github.com/iceseer/polkadot", package = "polkadot-parachain", tag = "v0.8.8-1", default-features = false, features = [ "wasm-api" ] }
+parachain = { git = "https://github.com/paritytech/polkadot", package = "polkadot-parachain", tag = "v0.8.8", default-features = false, features = [ "wasm-api" ] }
 codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
 tiny-keccak = "1.5.0"
 dlmalloc = { version = "0.1.3", features = [ "global" ] }
 
-# We need to make sure the global allocator is disabled until we have support of full substrate externalities
-runtime-io = { package = "sp-io", git = "https://github.com/iceseer/substrate", branch = "master", default-features = false, features = [ "disable_allocator" ] }
+# We need to make sure the global allocator is disabled until we have support of full substrate externalities , rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8"
+runtime-io = { package = "sp-io", git = "https://github.com/paritytech/substrate", default-features = false, features = [ "disable_allocator" ] }
 
 [build-dependencies]
 wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }
