--- a/iroha_client_no_std/Cargo.toml
+++ b/iroha_client_no_std/Cargo.toml
@@ -19,12 +19,12 @@ maintenance = { status = "actively-developed" }
 [dependencies]
 #iroha = { version = "=0.1.0", path = "../iroha" }
 #iroha_network = { version = "=0.1.0", path = "../iroha_network" }
-iroha_derive = { version = "=0.1.0", path = "../iroha_macro/iroha_derive" }
+#iroha_derive = { version = "=0.1.0", path = "../iroha_macro/iroha_derive" }
 iroha_logger = { version = "=0.1.0", path = "../iroha_logger"}
 async-std = { version = "1.5", features = ["attributes"], default-features = false }
-parity-scale-codec = { version = "1.3", features = ["derive"] }
-ursa = { git="https://github.com/hyperledger/ursa.git", branch="master", default-features=false, features=["hashes", "ed25519"] }
-chrono = { version = "0.4.13", features = ["clock"], default-features = false }
+parity-scale-codec = { version = "1.3.1", features = ["derive", "full" ], default-features = false }
+#ursa = { git="https://github.com/hyperledger/ursa.git", branch="master", default-features=false, features=["hashes", "ed25519"] }
+chrono = { version = "0.4.13", features = ["alloc"], default-features = false }
 #serde = { version = "1.0", features = ["derive"], default-features = false }
 #serde_json = "1.0"
 serde = { package = "alt_serde", version = "1", default-features = false, features = ["derive"] }
@@ -33,6 +33,12 @@ log = { version = "0.4", features = ["std", "serde"] }
 
 [dev-dependencies]
 tempfile = "3"
+
+#[dependencies.sp-core]
+#default-features = false
+#git = 'https://github.com/paritytech/substrate.git'
+#tag = 'v2.0.0-rc4'
+#version = '2.0.0-rc4'
 
 [features]
 default = [ ]
