--- a/iroha_substrate/parachain/runtime/Cargo.toml
+++ b/iroha_substrate/parachain/runtime/Cargo.toml
@@ -4,20 +4,78 @@ version = "0.8.8"
 authors = ["Soramitsu <https://soramitsu.co.jp/>"]
 description = "Parachain to provide iroha - polkadot connection."
 edition = "2018"
-build = "build.rs"
+license = "GPL-3.0-or-later"
+description = "A runtime that demonstrates using offchain workers"
+
+[package.metadata.substrate]
+categories = [
+	"runtime",
+	"offchain worker",
+	"tutorial",
+	"recipe",
+]
+compatibility_version = "2.0.0-rc3"
 
 [dependencies]
-parachain = { git = "https://github.com/paritytech/polkadot", package = "polkadot-parachain", tag = "v0.8.8", default-features = false, features = [ "wasm-api" ] }
-codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
-tiny-keccak = "1.5.0"
-dlmalloc = { version = "0.1.3", features = [ "global" ] }
+serde = { version = "1.0", optional = true, features = ["derive"] }
+parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
 
-# We need to make sure the global allocator is disabled until we have support of full substrate externalities , rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8"
-runtime-io = { package = "sp-io", git = "https://github.com/paritytech/substrate", default-features = false, features = [ "disable_allocator" ] }
+# Substrate pallets & dependencies
+frame-executive = { version = '2.0.0-rc3', default-features = false }
+frame-support = { version = '2.0.0-rc3', default-features = false }
+frame-system = { version = '2.0.0-rc3', default-features = false }
+pallet-balances = { version = '2.0.0-rc3', default-features = false }
+pallet-indices = { version = '2.0.0-rc3', default-features = false }
+pallet-randomness-collective-flip = { version = '2.0.0-rc3', default-features = false }
+pallet-sudo = { version = '2.0.0-rc3', default-features = false }
+pallet-timestamp = { version = '2.0.0-rc3', default-features = false }
+pallet-transaction-payment = { version = '2.0.0-rc3', default-features = false }
+sp-api = { version = '2.0.0-rc3', default-features = false }
+sp-block-builder = { version = '2.0.0-rc3', default-features = false }
+sp-core = { version = '2.0.0-rc3', default-features = false }
+sp-inherents = { version = '2.0.0-rc3', default-features = false }
+sp-io = { version = '2.0.0-rc3', default-features = false }
+sp-offchain = { version = '2.0.0-rc3', default-features = false }
+sp-runtime = { version = '2.0.0-rc3', default-features = false }
+sp-session = { version = '2.0.0-rc3', default-features = false }
+sp-std = { version = '2.0.0-rc3', default-features = false }
+sp-transaction-pool = { version = '2.0.0-rc3', default-features = false }
+sp-version = { version = '2.0.0-rc3', default-features = false }
+
+# Recipe Pallets
+offchain-demo = { path = "../ pallets/offchain-demo", default-features = false }
+#offchain-demo = { path = "../../pallets/offchain-demo", default-features = false }
 
 [build-dependencies]
-wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }
+wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.4" }
 
 [features]
-default = [ "std" ]
-std = ["parachain/std"]
+default = ["std"]
+std = [
+	# Substrate dependencies alphabetically
+	"frame-executive/std",
+	"frame-support/std",
+	"frame-system/std",
+	"pallet-balances/std",
+	"pallet-indices/std",
+	"pallet-randomness-collective-flip/std",
+	"pallet-sudo/std",
+	"pallet-timestamp/std",
+	"pallet-transaction-payment/std",
+	"parity-scale-codec/std",
+	"serde",
+	"sp-api/std",
+	"sp-block-builder/std",
+	"sp-core/std",
+	"sp-inherents/std",
+	"sp-io/std",
+	"sp-offchain/std",
+	"sp-runtime/std",
+	"sp-session/std",
+	"sp-std/std",
+	"sp-transaction-pool/std",
+	"sp-version/std",
+
+	# Recipes pallets
+	"offchain-demo/std",
+]
