--- a/iroha_client/Cargo.toml
+++ b/iroha_client/Cargo.toml
@@ -21,7 +21,7 @@ iroha = { version = "=0.1.0", path = "../iroha" }
 iroha_network = { version = "=0.1.0", path = "../iroha_network" }
 iroha_derive = { version = "=0.1.0", path = "../iroha_macro/iroha_derive" }
 async-std = { version = "1.5", features = ["attributes"] }
-ursa = "0.3.2"
+ursa = { git="https://github.com/hyperledger/ursa.git", branch="master", default-features=false, features=["hashes", "ed25519"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
