--- a/iroha_client_no_std/Cargo.toml
+++ b/iroha_client_no_std/Cargo.toml
@@ -18,14 +18,16 @@ maintenance = { status = "actively-developed" }
 
 [dependencies]
 #iroha = { version = "=0.1.0", path = "../iroha" }
-iroha_network = { version = "=0.1.0", path = "../iroha_network" }
+#iroha_network = { version = "=0.1.0", path = "../iroha_network" }
 iroha_derive = { version = "=0.1.0", path = "../iroha_macro/iroha_derive" }
-async-std = { version = "1.5", features = ["attributes"] }
+async-std = { version = "1.5", features = ["attributes"], default-features = false }
 parity-scale-codec = { version = "1.3", features = ["derive"] }
 ursa = { git="https://github.com/hyperledger/ursa.git", branch="master", default-features=false, features=["hashes", "ed25519"] }
-serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4.13", features = ["clock"], default-features = false }
-serde_json = "1.0"
+#serde = { version = "1.0", features = ["derive"], default-features = false }
+#serde_json = "1.0"
+serde = { package = "alt_serde", version = "1", default-features = false, features = ["derive"] }
+serde_json = { version = "1", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }
 
 [features]
 default = [ ]
