--- a/iroha_client_no_std/Cargo.toml
+++ b/iroha_client_no_std/Cargo.toml
@@ -20,7 +20,7 @@ maintenance = { status = "actively-developed" }
 #iroha = { version = "=0.1.0", path = "../iroha" }
 #iroha_network = { version = "=0.1.0", path = "../iroha_network" }
 #iroha_derive = { version = "=0.1.0", path = "../iroha_macro/iroha_derive" }
-iroha_logger = { version = "=0.1.0", path = "../iroha_logger"}
+#iroha_logger = { version = "=0.1.0", path = "../iroha_logger"}
 async-std = { version = "1.5", features = ["attributes"], default-features = false }
 parity-scale-codec = { version = "1.3.1", features = ["derive", "full" ], default-features = false }
 #ursa = { git="https://github.com/hyperledger/ursa.git", branch="master", default-features=false, features=["hashes", "ed25519"] }
@@ -29,7 +29,6 @@ chrono = { version = "0.4.13", features = ["alloc"], default-features = false }
 #serde_json = "1.0"
 serde = { package = "alt_serde", version = "1", default-features = false, features = ["derive"] }
 serde_json = { version = "1", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }
-log = { version = "0.4", features = ["std", "serde"] }
 
 [dev-dependencies]
 tempfile = "3"
