Add more verbosity to bridge test

--- a/iroha_substrate/bin/Dockerfile
+++ b/iroha_substrate/bin/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /builds
 
 COPY iroha ./iroha
 COPY node-template ./node-template
+COPY config.json ./config.json
 
 RUN set -eux; \
 	apt -y update; \
