--- a/docker-compose-substrate.yml
+++ b/docker-compose-substrate.yml
@@ -18,14 +18,16 @@ services:
         target: /root/.local
     command: bash -c "cargo build --package node-template && ../../target/debug/node-template --dev --ws-external & cd ../.. && RUST_LOG=error cargo run --package iroha --bin" # iroha > /dev/null"
   dev-bin:
-    build: iroha_substrate/bin
+    build: docker_container/iroha_substrate/bin
     container_name: node-template-bin
 #    working_dir: /var/www/iroha/iroha_substrate/bin
     ports:
       - "9944:9944"
-      - "888:888"
+      - "7878:7878"
+      - "8888:8888"
+      - "1337:1337"
     volumes:
       - type: bind
         source: ./.local
         target: /root/.local
-    command: bash -c "./node-template --dev --ws-external" # & RUST_LOG=error ./iroha"
+    command: bash -c "./node-template --dev --ws-external & RUST_LOG=error ./iroha"
