--- a/iroha_substrate/substrate-node-template/pallets/common/Cargo.toml
+++ b/iroha_substrate/substrate-node-template/pallets/common/Cargo.toml
@@ -1,22 +1,26 @@
 [package]
-name = "errors"
-version = "0.1.0"
-authors = ["Soramitsu"]
+name = "common"
+version = "2.0.0-rc.4"
+authors = ["Interlay Ltd"]
 edition = "2018"
 
 [dependencies.sp-std]
 default-features = false
-version = '2.0.0-alpha.5'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc4'
+version = '2.0.0-rc4'
 
 [dependencies.frame-support]
 default-features = false
-version = '2.0.0-alpha.5'
+git = 'https://github.com/paritytech/substrate.git'
+tag = 'v2.0.0-rc4'
+version = '2.0.0-rc4'
 
 [dependencies.codec]
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '1.2.0'
+version = '1.3.0'
 
 [features]
 default = ['std']
