--- a/iroha_substrate/bridge-tester/Cargo.toml
+++ b/iroha_substrate/bridge-tester/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Vladislav Markushin <negigic@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-substrate-api-client = { path = "../substrate-api-client" }
-#substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git" }
+substrate-api-client = { path = "../../../substrate-api-client" }
+#substrate-api-client = { git = "https://github.com/vmarkushin/substrate-api-client.git" }
 codec = { package = "parity-scale-codec", features = ["derive"], version = "1.0.0", default-features = false }
 iroha_client = { path = "../../iroha_client" }
 iroha = { path = "../../iroha" }
