--- a/iroha_client_no_std/Cargo.toml
+++ b/iroha_client_no_std/Cargo.toml
@@ -21,7 +21,7 @@ maintenance = { status = "actively-developed" }
 #iroha_network = { version = "=0.1.0", path = "../iroha_network" }
 #iroha_derive = { version = "=0.1.0", path = "../iroha_macro/iroha_derive" }
 #iroha_logger = { version = "=0.1.0", path = "../iroha_logger"}
-async-std = { version = "1.5", features = ["attributes"], default-features = false }
+#async-std = { version = "1.5", features = ["attributes"], default-features = false }
 parity-scale-codec = { version = "1.3.1", features = ["derive", "full" ], default-features = false }
 #ursa = { git="https://github.com/hyperledger/ursa.git", branch="master", default-features=false, features=["hashes", "ed25519"] }
 chrono = { version = "0.4.13", features = ["alloc"], default-features = false }
