--- a/iroha_client_no_std/Cargo.toml
+++ b/iroha_client_no_std/Cargo.toml
@@ -25,10 +25,11 @@ maintenance = { status = "actively-developed" }
 parity-scale-codec = { version = "1.3.1", features = ["derive", "full" ], default-features = false }
 #ursa = { git="https://github.com/hyperledger/ursa.git", branch="master", default-features=false, features=["hashes", "ed25519"] }
 chrono = { version = "0.4.13", features = ["alloc"], default-features = false }
-serde = { version = "1.0", features = ["derive"], default-features = false }
+serde = { version = "1.0.101", optional = true, features = ["derive"] }
 #serde_json = "1.0"
 #serde = { package = "alt_serde", version = "1", default-features = false, features = ["derive"] }
-serde_json = { version = "1", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }
+#serde_json = { version = "1", default-features = false, git = "https://github.com/Xanewok/json", branch = "no-std", features = ["alloc"] }
+hex = "0.4.0"
 
 [dev-dependencies]
 tempfile = "3"
@@ -40,6 +41,8 @@ tempfile = "3"
 #version = '2.0.0-rc4'
 
 [features]
-default = [ ]
+default = [ 'std' ]
 std = [
+    "serde",
+    "parity-scale-codec/std",
 ]
