--- a/iroha_crypto/Cargo.toml
+++ b/iroha_crypto/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ursa = { git="https://github.com/hyperledger/ursa.git", branch="master", default-features=false, features=["hashes", "ed25519"] }
+ursa = { git="https://github.com/hyperledger/ursa.git", branch="master", default-features=false, features=["hashes", "ed25519", "ecdsa_secp256k1"] }
 serde = { version = "1.0", features = ["derive"] }
 parity-scale-codec = { version = "1.3", features = ["derive"] }
 hex = "0.4.0"
